# kosix-api

./: .env.sample  .gitignore  env.py  pyproject.toml  test.py
alembic/versions/: 42a4bf055c05_create_file_upload_table.py
app/: main.py
app/controllers/: auth_controller.py  team_controller.py  upload_controller.py
app/core/: config.py  logger.py
app/db/: init_db.py  session.py
app/models/: __init__.py  upload.py
app/routes/: auth.py  teams.py  uploads.py
app/schemas/: __init__.py  auth.py  upload.py
docker/: docker-compose.yml
